infrastructure/apps/cards-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cards-service
  namespace: mrun-apps

spec:
  selector:
    app.kubernetes.io/name: cards-service

  ports:
    - name: http
      port: 3000
      targetPort: 8000

  type: ClusterIP
