infrastructure/apps/cards-service/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: cards-service
  namespace: mrun-apps

spec:

  podSelector:

    matchLabels:
      app.kubernetes.io/name: cards-service

  policyTypes:
    - Ingress
    - Egress

  ingress:

    - from:

        - namespaceSelector: {}

  egress:

    - to:

        - namespaceSelector: {}
